--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+
+.idea/
+
+
 *.iws
 *.iml
 *.ipr
@@ -34,5 +34,4 @@ build/
 ### VS Code ###
 .vscode/
 
-### Mac OS ###
 .DS_Store
