设置端口，及打包插件

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,4 +16,5 @@ mybatis-plus:
   mapper-locations: classpath:mappering/*.xml
   #实体扫描，多个package用逗号或者分号分隔
   type-aliases-package: com.liang.web.entity
-
+server:
+  port: 10102
